--- a/manifest.json
+++ b/manifest.json
@@ -10,5 +10,10 @@
             "js": ["jquery-3.5.1.min.js", "content.js"]
         }
     ],
-    "web_accessible_resources": ["rick.jpg"]
+    "web_accessible_resources": ["rick.jpg"],
+    "browser_action": {
+        "default_popup": "popup/popup.html",
+        "default_title": "Rick Roll Detector"
+    },
+    "permissions": ["storage"]
 }
